@@ -99,16 +99,16 @@ public class AccountController {
         }
     }
 
-    @DeleteMapping(value = "/delete/{accountID}", produces = "application/json;charset=UTF-8")
-    public ResponseEntity<Map<String, String>> delete(@PathVariable Integer accountID) {
+    @DeleteMapping(value = "/delete", produces = "application/json;charset=UTF-8")
+    public ResponseEntity<Map<String, String>> deleteAccounts(@RequestBody List<Integer> accountIDs) {
     try {
-        Map<String, String> response = accountService.deleteAccount(accountID);
-        return ResponseEntity.ok(response);
-        } catch (RuntimeException e) {
-        return ResponseEntity.badRequest().body(Map.of("message", e.getMessage()));
-        }
+        accountService.deleteAccounts(accountIDs);
+        return ResponseEntity.ok(Collections.singletonMap("message", "Xóa các tài khoản thành công"));
+    } catch (RuntimeException e) {
+        return ResponseEntity.badRequest().body(Collections.singletonMap("message", e.getMessage()));
     }
 
+    }
 
     @PostMapping("/create")
     public ResponseEntity<Map<String, String>> createAccount(@RequestBody AccountRequest accountRequest) {
@@ -130,7 +130,6 @@ public class AccountController {
         }
     }
 
-    
     @PostMapping(value = "/forget-password", produces = "application/json;charset=UTF-8")
     public ResponseEntity<Map<String, String>> forgetPassword(@RequestParam String email) {
         try {
